[gd_scene load_steps=15 format=3]

[ext_resource type="Script" path="res://Scripts/advanced_reading_scene.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://0con8ixqofpr" path="res://gui/Update/UI/ui 8.png" id="2_bg"]
[ext_resource type="FontFile" uid="uid://l1q8mfvbxty3" path="res://Fonts/dyslexiafont/OpenDyslexic-Regular.otf" id="3_regular"]
[ext_resource type="FontFile" uid="uid://bdlqaeel30c00" path="res://Fonts/dyslexiafont/OpenDyslexic-Bold.otf" id="4_bold"]
[ext_resource type="Texture2D" uid="uid://cylxg6njg7bam" path="res://gui/Update/UI/yellow button.png" id="5_yellow"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dt2ji"]
bg_color = Color(0.941176, 0.890196, 0.980392, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.701961, 0.4, 0.901961, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_color = Color(0, 0, 0, 0.3)
shadow_size = 10
shadow_offset = Vector2(0, 6)

[node name="AdvancedReadingScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bg")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 57.0
offset_top = 33.0
offset_right = -58.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 2

[node name="HeaderPanel" type="Panel" parent="MainContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_dt2ji")

[node name="HeaderContainer" type="VBoxContainer" parent="MainContainer/HeaderPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="MainContainer/HeaderPanel/HeaderContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_bold")
theme_override_font_sizes/font_size = 32
text = "Advanced Reading"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="MainContainer/HeaderPanel/HeaderContainer"]
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_bold")
theme_override_font_sizes/font_size = 16
text = "Back"
icon = ExtResource("5_yellow")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Content" type="ScrollContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20
